--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
     tools:context="com.example.sagar.popupshops_buyerside.Registration.LoginActivity">
 
     <EditText
         android:id="@+id/passwordInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="74dp"
-        android:layout_marginTop="18sp"
+        android:layout_marginRight="52dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="textPassword"
         android:textColor="@color/black"
@@ -25,8 +26,7 @@
         android:id="@+id/emailInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="-139dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="168dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:textColor="@color/black"
@@ -40,14 +40,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="17dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="17dp"
-        android:layout_marginStart="8dp"
         android:text="Email"
         android:textColor="@color/black"
         android:textSize="15sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/emailInput"
+        app:layout_constraintHorizontal_bias="0.289"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/emailInput"
         tools:layout_constraintBaseline_creator="1"
@@ -57,16 +56,14 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="17dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="17dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="24dp"
         android:text="Password"
 
         android:textColor="@color/black"
         android:textSize="15sp"
-        app:layout_constraintHorizontal_bias="0.57"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/passwordInput"
         app:layout_constraintTop_toTopOf="@+id/passwordInput"
@@ -75,14 +72,14 @@
 
     <Button
         android:id="@+id/loginSubmit"
-        android:layout_width="375dp"
+        android:layout_width="175dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="93dp"
-        android:background="@color/colorPrimary"
+        android:layout_marginTop="80dp"
+        android:background="@null"
         android:text="Login"
-        android:textColor="@color/white"
-        android:textSize="15dp"
-        app:layout_constraintHorizontal_bias="0.503"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
