--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
     tools:context="com.example.sagar.popupshops_buyerside.Registration.SignupActivity">
 
     <TextView
@@ -11,43 +12,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="28dp"
-        android:layout_marginStart="28dp"
         android:text="User Name"
-        android:textSize="15sp"
         android:textColor="@color/black"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/userName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/userName"
+        app:layout_constraintVertical_bias="0.857"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintVertical_bias="0.619" />
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="38dp"
         android:text="Email"
-        android:textSize="15sp"
         android:textColor="@color/black"
+        android:textSize="15sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/emailSignUp"
+        app:layout_constraintHorizontal_bias="0.378"
         app:layout_constraintLeft_toLeftOf="@+id/textView3"
         app:layout_constraintRight_toRightOf="@+id/textView3"
         tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintHorizontal_bias="0.324" />
+        tools:layout_constraintRight_creator="1" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="28dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="8dp"
         android:text="Password"
-        android:textSize="15sp"
         android:textColor="@color/black"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/passwordSignUp"
         tools:layout_constraintLeft_creator="1"
@@ -57,47 +56,46 @@
         android:id="@+id/emailSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
-        android:textSize="15sp"
-        android:textColor="@color/black"
         android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/userName"
         app:layout_constraintRight_toRightOf="@+id/userName"
         app:layout_constraintTop_toBottomOf="@+id/userName"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintHorizontal_bias="0.0" />
+        tools:layout_constraintTop_creator="1" />
 
     <EditText
         android:id="@+id/passwordSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
-        android:textSize="15sp"
-        android:textColor="@color/black"
         android:inputType="textPassword"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/emailSignUp"
         app:layout_constraintRight_toRightOf="@+id/emailSignUp"
         app:layout_constraintTop_toBottomOf="@+id/emailSignUp"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintHorizontal_bias="0.0" />
+        tools:layout_constraintTop_creator="1" />
 
     <EditText
         android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="51dp"
-        android:layout_marginRight="51dp"
-        android:layout_marginTop="87dp"
+        android:layout_marginRight="48dp"
+        android:layout_marginTop="120dp"
         android:ems="10"
-        android:textSize="15sp"
-        android:textColor="@color/black"
         android:inputType="textPersonName"
+        android:textColor="@color/black"
+        android:textSize="15sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintRight_creator="1"
@@ -105,17 +103,17 @@
 
     <Button
         android:id="@+id/signUpSubmit"
-        android:layout_width="375dp"
+        android:layout_width="175dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="92dp"
+        android:background="@null"
         android:text="Sign Up"
-        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordSignUp"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/white"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="93dp"
-        app:layout_constraintHorizontal_bias="0.466" />
+        tools:layout_constraintTop_creator="1" />
 </android.support.constraint.ConstraintLayout>
