--- a/app/src/main/res/layout/addview.xml
+++ b/app/src/main/res/layout/addview.xml
@@ -1,87 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/constraintLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:background="@drawable/bg"
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ImageButton
         android:id="@+id/imageButton1"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="32dp"
-        android:scaleType="centerInside"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_menu_camera" />
+        style="@android:style/Widget.Holo.ImageButton"
+        android:layout_width="350sp"
+        android:layout_height="200sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
+        android:adjustViewBounds="false"
+        android:background="@null"
+        app:srcCompat="@drawable/camera" />
 
     <Button
         android:id="@+id/attachButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_below="@+id/imageButton1"
+        android:layout_centerHorizontal="true"
         android:text="Attach Image"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton1" />
+
+    <Button
+        android:id="@+id/uploadButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/categoryInput"
+        android:layout_alignLeft="@+id/categoryInput"
+        android:layout_alignRight="@+id/categoryInput"
+        android:layout_alignStart="@+id/categoryInput"
+        android:layout_below="@+id/categoryInput"
+        android:layout_marginTop="36dp"
+        android:text="upload"
+        app:layout_constraintTop_toBottomOf="@+id/categoryInput" />
 
     <EditText
         android:id="@+id/descriptionInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_below="@+id/attachButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="22dp"
         android:ems="10"
         android:hint="description"
         android:inputType="textPersonName"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/attachButton" />
 
     <EditText
         android:id="@+id/priceInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_alignLeft="@+id/descriptionInput"
+        android:layout_alignStart="@+id/descriptionInput"
+        android:layout_below="@+id/descriptionInput"
+        android:layout_marginTop="17dp"
         android:ems="10"
         android:hint="price"
         android:inputType="numberDecimal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descriptionInput" />
 
     <EditText
-        android:id="@+id/stockInput"
+        android:id="@+id/itemStockInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_alignLeft="@+id/priceInput"
+        android:layout_alignStart="@+id/priceInput"
+        android:layout_below="@+id/priceInput"
+        android:layout_marginTop="17dp"
         android:ems="10"
         android:hint="stock"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/priceInput" />
-
-    <Button
-        android:id="@+id/uploadButton"
-        android:layout_width="wrap_content"
-        android:layout_height="46dp"
-        android:layout_marginTop="10dp"
-        android:text="Upload"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryInput" />
 
     <AutoCompleteTextView
         android:id="@+id/categoryInput"
-        android:layout_width="217dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/itemStockInput"
+        android:layout_alignStart="@+id/itemStockInput"
+        android:layout_below="@+id/itemStockInput"
+        android:layout_marginTop="17dp"
+        android:ems="10"
         android:hint="category"
         android:maxLength="25"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stockInput" />
+        app:layout_constraintTop_toBottomOf="@+id/itemStockInput" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
