--- a/app/src/main/res/layout/activity_select_action.xml
+++ b/app/src/main/res/layout/activity_select_action.xml
@@ -10,30 +10,80 @@
 
     <ImageButton
         android:id="@+id/buyButton"
-        android:layout_width="375dp"
-        android:layout_height="200dp"
+        android:layout_width="197dp"
+        android:layout_height="214dp"
+        android:layout_marginTop="40dp"
         android:background="@null"
         android:src="@drawable/goshopping"
-        android:text="Go Shopping"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        app:layout_constraintHorizontal_bias="0.466"
+
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="75dp" />
+        app:layout_constraintTop_toBottomOf="@id/sellButton" />
 
     <ImageButton
         android:id="@+id/sellButton"
-        android:layout_width="375dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="28dp"
-        android:text="My Pop Up Shop"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:src="@drawable/buy"
+        android:layout_width="361dp"
+        android:layout_height="221dp"
         android:background="@null"
-        app:layout_constraintHorizontal_bias="0.502"
+        android:src="@drawable/buy"
+        android:textColor="@color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
+
+    <ImageButton
+        android:id="@+id/wishlistbutton"
+        android:layout_width="179dp"
+        android:layout_height="213dp"
+        android:layout_marginTop="40dp"
+        android:background="@null"
+        android:src="@drawable/liked"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sellButton" />
+
+
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:text="My Snap Shop"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sellButton" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:text="Go Shopping"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="0.226"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buyButton" />
+
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:text="Liked By You"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="0.836"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buyButton" />
+
+
 </android.support.constraint.ConstraintLayout>
