--- a/app/src/main/res/layout/recycle.xml
+++ b/app/src/main/res/layout/recycle.xml
@@ -4,6 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
+
     android:padding="16dp">
 
     <android.support.v7.widget.RecyclerView
