--- a/app/src/main/res/layout/tinder_card_view.xml
+++ b/app/src/main/res/layout/tinder_card_view.xml
@@ -32,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <!--
@@ -48,7 +48,9 @@
             <Button
                 android:id="@+id/shopName"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
