--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -49,20 +49,16 @@
             android:layout_above="@+id/deleteButton"
             android:layout_marginLeft="13dp"
             android:layout_marginStart="13dp"
-            android:textSize="18sp"
             android:layout_toEndOf="@+id/itemImage"
-            android:layout_toRightOf="@+id/itemImage" />
-            android:layout_height="wrap_content" />
+            android:layout_toRightOf="@+id/itemImage"
+            android:textSize="18sp" />
+        android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/itemStock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/itemPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/itemCateg"
