--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -36,40 +36,41 @@
             android:id="@+id/itemPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/itemDescr"
-            android:layout_alignLeft="@+id/itemCateg"
-            android:layout_alignStart="@+id/itemCateg"
-            android:textSize="26sp"
+            android:layout_below="@+id/itemCateg"
+            android:layout_toRightOf="@+id/itemImage"
+
+            android:textSize="22sp"
             app:layout_constraintTop_toBottomOf="@+id/itemCateg" />
 
         <TextView
             android:id="@+id/itemDescr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/deleteButton"
-            android:layout_marginLeft="13dp"
-            android:layout_marginStart="13dp"
-            android:layout_toEndOf="@+id/itemImage"
+            android:layout_alignTop="@+id/deleteButton"
             android:layout_toRightOf="@+id/itemImage"
+
+
             android:textSize="18sp" />
-        android:layout_height="wrap_content" />
+
 
         <TextView
             android:id="@+id/itemStock"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/itemPrice"
+            android:layout_toRightOf="@+id/itemImage"
+
+            android:textSize="18sp" />
 
 
         <TextView
             android:id="@+id/itemCateg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/itemImage"
-            android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_toEndOf="@+id/itemImage"
+            android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/itemImage"
-            android:textSize="26sp" />
+
+            android:textSize="22sp" />
 
 
         <ImageButton
