--- a/app/src/main/res/layout/display_buyer_recycle.xml
+++ b/app/src/main/res/layout/display_buyer_recycle.xml
@@ -31,31 +31,35 @@
         <TextView
             android:id="@+id/itemDescr"
             android:layout_width="wrap_content"
+            android:textSize="16sp"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/itemPrice"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+             android:textSize="24sp" />
 
         <TextView
             android:id="@+id/itemCateg"
+            android:textSize="24sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/itemStock"
             android:layout_width="wrap_content"
+            android:textSize="24sp"
             android:layout_height="wrap_content" />
 
 
         <Button
             android:id="@+id/findShop"
             android:text="Find Shop!"
-            android:layout_width="30sp"
-            android:layout_height="30sp"
-            android:layout_marginLeft="300sp"
-            android:layout_marginStart="300sp" />
+            android:layout_width="wrap_content"
+            android:layout_height="60sp"
+            android:layout_marginLeft="215sp"
+             />
 
 
 
