--- a/app/src/main/res/layout/activity_buyer_recycle.xml
+++ b/app/src/main/res/layout/activity_buyer_recycle.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     android:padding="16dp">
 
+
+    <Button
+        android:id="@+id/clearList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear WishList"
+        android:layout_marginBottom="5dp"
+        />
+
     <android.support.v7.widget.RecyclerView
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:id="@+id/rv">
+        android:id="@+id/rv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
-
 
 
 </LinearLayout>
