final UI update

--- a/app/src/main/res/layout/activity_buyer_recycle.xml
+++ b/app/src/main/res/layout/activity_buyer_recycle.xml
@@ -3,16 +3,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@drawable/bg"
     android:padding="16dp">
 
 
     <Button
         android:id="@+id/clearList"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Clear WishList"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="@null"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:layout_marginBottom="5dp"
         />
 
