--- a/app/src/main/res/layout/display2.xml
+++ b/app/src/main/res/layout/display2.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/deleteButton"
             android:layout_toRightOf="@+id/itemImage"
-
+            android:layout_below="@+id/itemStock"
 
             android:textSize="18sp" />
 
