--- a/app/src/main/res/layout/display_buyer_recycle.xml
+++ b/app/src/main/res/layout/display_buyer_recycle.xml
@@ -10,46 +10,63 @@
 
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="6dp">
 
         <ImageView
             android:id="@+id/itemImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_width="128sp"
+            android:layout_height="128sp"
             android:layout_marginRight="16dp" />
 
         <TextView
             android:id="@+id/itemDescr"
             android:layout_width="wrap_content"
-            android:textSize="16sp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/itemStock"
+            android:layout_alignTop="@+id/deleteButton"
+            android:layout_toRightOf="@+id/itemImage"
+
+            android:textSize="22sp"
+            app:layout_constraintTop_toBottomOf="@+id/itemCateg"  />
 
         <TextView
             android:id="@+id/itemPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-             android:textSize="24sp" />
+            android:layout_below="@+id/itemCateg"
+            android:layout_toRightOf="@+id/itemImage"
+             android:textSize="22sp" />
+
 
         <TextView
             android:id="@+id/itemCateg"
-            android:textSize="24sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/itemImage"
+
+            android:textSize="22sp"/>
 
         <TextView
             android:id="@+id/itemStock"
             android:layout_width="wrap_content"
             android:textSize="24sp"
+            android:layout_below="@+id/itemPrice"
+            android:layout_toRightOf="@+id/itemImage"
             android:layout_height="wrap_content" />
 
 
@@ -58,12 +75,16 @@
             android:text="Find Shop!"
             android:layout_width="wrap_content"
             android:layout_height="60sp"
-            android:layout_marginLeft="215sp"
+            android:layout_alignBottom="@+id/itemImage"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="22dp"
+            android:layout_marginRight="22dp"
              />
 
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
 
